...
                    }
                }
                if (session?.writable == true) {
                    TextButton(
                        onClick = { onAction(CodeEditorAction.SAVE) },
                        enabled = enabled,
                        modifier = Modifier.testTag("code-save"),
                    ) {
                        Text(stringResource(R.string.action_save))
                    }
                }
                if (
                    session != null &&
...
